added package level pricing
